--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/microservices": "^11.0.17",
     "@nestjs/platform-express": "^10.0.0",
     "amqplib": "^0.10.7",
     "dotenv-expand": "^12.0.1",
