--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "amqplib": "^0.10.7",
     "dotenv-expand": "^12.0.1",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
