--- a/example/config/.dev.env
+++ b/example/config/.dev.env
@@ -1,7 +1,7 @@
-APP_NAME=nestjs-bustransit
-RMQ_HOST=localhost
+APP_NAME=linkadz
+RMQ_HOST=52.79.110.24
 RMQ_PORT=5672
-RMQ_USERNAME=guest
-RMQ_PASSWORD=guest
-RMQ_VHOST=/service-bus
+RMQ_USERNAME=linkadz
+RMQ_PASSWORD=u9gizC6YoNXP56
+RMQ_VHOST=/linkadz
 RMQ_URI=amqp://${RMQ_USERNAME}:${RMQ_PASSWORD}@${RMQ_HOST}:${RMQ_PORT}${RMQ_VHOST}
