--- a/example/tsconfig.json
+++ b/example/tsconfig.json
@@ -9,7 +9,8 @@
     "target": "ES2021",
     "sourceMap": true,
     "outDir": "./dist",
-    "baseUrl": "./",
+    "rootDir": ".",
+    "baseUrl": ".",
     "incremental": true,
     "skipLibCheck": true,
     "strictNullChecks": false,
@@ -21,6 +22,14 @@
       "@shared/*": ["shared/*"],
       "@infrastructure/*": ["src/infrastructure/*"],
       "@configs/*": ["src/configs/*"],
+      "nestjs-bustransit": ["lib/index"]
     }
-  }
+  },
+  "exclude": [
+    "libs/**/*",
+    "schemas/**/*",
+    "node_modules",
+    "test",
+    "dist"
+  ]
 }
