--- a/example/package.json
+++ b/example/package.json
@@ -10,8 +10,8 @@
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "NODE_ENV=dev nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:debug": "NODE_ENV=dev nest start --debug --watch",
+    "start:prod": "node dist/src/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -22,12 +22,11 @@
   "dependencies": {
     "@nestjs/class-transformer": "^0.4.0",
     "@nestjs/class-validator": "^0.13.4",
-    "@nestjs/common": "^10.0.0",
+    "@nestjs/common": "^11.1.2",
     "@nestjs/config": "^4.0.2",
-    "@nestjs/core": "^10.0.0",
+    "@nestjs/core": "^11.1.2",
     "@nestjs/microservices": "^11.0.17",
     "@nestjs/platform-express": "^10.0.0",
-    "nestjs-bustransit": "file:../dist",
     "amqplib": "^0.10.7",
     "dotenv-expand": "^12.0.1",
     "reflect-metadata": "^0.2.0",
