--- a/example/package.json
+++ b/example/package.json
@@ -29,8 +29,11 @@
     "@nestjs/platform-express": "^10.0.0",
     "amqplib": "^0.10.9",
     "dotenv-expand": "^12.0.1",
+    "mongoose": "^9.0.2",
+    "pg": "^8.16.3",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "typeorm": "^0.3.28",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
