--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nestjs-bustransit",
-  "version": "0.3.0",
-  "description": "ServiceBus for NestJs",
+  "version": "0.3.1",
+  "description": "Production-ready NestJS message bus with RabbitMQ, featuring Saga Pattern with persistence (MongoDB/PostgreSQL), Routing Slips orchestration, and comprehensive retry strategies for reliable distributed systems",
   "author": "nguyen2242x@gmail.com",
   "license": "MIT",
   "repository": "diepnghitinh/nestjs-bustransit",
@@ -18,8 +18,22 @@
   "keywords": [
     "nestjs",
     "service-bus",
+    "message-bus",
     "rabbitmq",
-    "saga"
+    "saga",
+    "saga-pattern",
+    "routing-slips",
+    "distributed-transactions",
+    "microservices",
+    "event-driven",
+    "compensation",
+    "retry-strategies",
+    "mongodb",
+    "postgresql",
+    "state-machine",
+    "orchestration",
+    "choreography",
+    "resilience"
   ],
   "dependencies": {
     "@nestjs/class-transformer": "^0.4.0",
